Refactored mongodb instantiation to singleton (probably not good idea)
